# ArchLab4

./: README.MD  README.md  c.yaml  config.py  conftest.py  generate_golden_fields.py  isa.py  memory_dump_nice.txt  mypy.ini  parser.py  process  processor.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
gg/: add64.yaml  fib.yaml  hello_user_name.yaml  hello_world.yaml
golden/: add64.yaml  cat.yaml  difference_100.yaml  fib.yaml  hello_user_name.yaml  hello_world.yaml  pause_test.yaml  sort.yaml  statement.yaml
lisps/: add64.lisp  cat.lisp  difference_100.lisp  fib.lisp  func.lisp  hello_user_name.lisp  if-else.lisp  p.lisp  pause.lisp  sort.lisp  statement.lisp  vec.lisp
test/: test_run_golden.py
